crates/aven-check/tests/fixtures/check/invalid/contextual-lambda-mismatch.av
f : (Int) -> Text = (x) => x
